fix(tabs): removes extra border from overflow when box variant

--- a/elements/rh-tabs/rh-tabs.css
+++ b/elements/rh-tabs/rh-tabs.css
@@ -75,8 +75,10 @@
 }
 
 #previousTab:before {
-  border-inline-start-width: 0;
-  border-block-end-width: 0;
+  border-width: 0;
+}
+
+:host(:not([box])) #previousTab:before {
   border-inline-end-width: 1px;
 }
 
